# power-series

./: changelog.md  power-series.cabal
src/Data/Series/: Power.hs
test/: Main.hs
